kubernetes/overlays/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-demo-dev
  namespace: demo-dev
spec:
  parentRefs:
  - name: nexus-gw
    namespace: nginx-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /dev
    backendRefs:
    - name: nginx-demo
      port: 80
